--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@south-paw/typeface-minecraft": "^1.0.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
-
+    "@heroicons/react": "^2.2.0",
+    "@south-paw/typeface-minecraft": "^1.0.0",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
